# vega-project

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: code-format.yml  unit-ci.yml
src/: CMakeLists.txt
src/geometry/: geometry.cpp  geometry.hpp  intersection.hpp  ray.hpp  sphere.hpp  triangle.hpp  vector.cpp  vector.hpp
src/raytracer/: camera_options.hpp  image.cpp  image.hpp  matrix.cpp  matrix.hpp  raytracer.cpp  raytracer.hpp  render_options.hpp
src/scene/: light.hpp  material.hpp  object.hpp  reader.cpp  reader.hpp  scene.hpp
test/: CMakeLists.txt
test/models/box/: CornellBox-Sphere.mtl
test/unit/: geometry.cpp  raytracer.cpp  raytracer_debug.cpp  reader.cpp
test/utils/: diff.cpp  diff.hpp
